adding solution to the repository

--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -30,10 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "well_height = 125\n",
+    "daily_distance = 30\n",
+    "nightly_distance = 20\n",
+    "snail_position = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "days = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while snail_position <= well_height:\n",
+    "    days += 1\n",
+    "    snail_position += daily_distance\n",
+    "    snail_position -= nightly_distance\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +119,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "well_height = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "nightly_distance = 20\n",
+    "snail_position = 0\n",
+    "days = 0\n",
+    "\n",
+    "while snail_position <= well_height:\n",
+    "    days += 1\n",
+    "    snail_position += advance_cm[days]\n",
+    "    snail_position -= nightly_distance\n",
+    "\n",
+    "print(days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +155,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 1, 13, 57, 24, 25]\n",
+      "Maximum displacement is 57\n",
+      "Minimum displacement is 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_list = advance_cm[:6]\n",
+    "\n",
+    "displacement = []\n",
+    "\n",
+    "for i in new_list:\n",
+    "    item = i - 20\n",
+    "    displacement.append(item)\n",
+    "\n",
+    "print(displacement)\n",
+    "print(\"Maximum displacement is\", max(displacement))\n",
+    "print(\"Minimum displacement is\", min(displacement))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,16 +191,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 1, 13, 57, 24, 25]\n",
+      "Average progress is 21.666666666666668\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_progress = sum(displacement) / len(displacement)\n",
+    "\n",
+    "print(displacement)\n",
+    "print(\"Average progress is\", avg_progress)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. What is the standard deviation of its displacement? Take into account the snail slides at night."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 1, 169, 3249, 576, 625]\n",
+      "Standard deviation is 28.047578623950173\n"
+     ]
+    }
+   ],
+   "source": [
+    "displacement_square = []\n",
+    "\n",
+    "for i in displacement:\n",
+    "    square = i ** 2\n",
+    "    displacement_square.append(square)\n",
+    "\n",
+    "print(displacement_square)\n",
+    "\n",
+    "\n",
+    "variance = sum(displacement_square)/len(displacement_square)\n",
+    "std = (variance ** 0.5)\n",
+    "print(\"Standard deviation is\", std)"
    ]
   },
   {
@@ -161,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
