adding solution to the repository

--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "nmbr_stops = len(stops)\n",
+    "print(nmbr_stops)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +78,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nmbr_passengers = []\n",
+    "passengers = 0\n",
+    "\n",
+    "for x, y in stops:\n",
+    "    passengers += x - y \n",
+    "    nmbr_passengers.append(passengers)\n",
+    "    \n",
+    "print(nmbr_passengers)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,16 +110,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum occupation of the bus is 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_occupation = max(nmbr_passengers)\n",
+    "print(\"Maximum occupation of the bus is\", max_occupation)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. Calculate the average occupation. And the standard deviation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average occupation of the bus is 9.333333333333334\n",
+      "[100, 169, 121, 100, 196, 100, 49, 25, 16]\n",
+      "Standard deviation is 9.865765724632494\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_occupation = sum(nmbr_passengers)/len(nmbr_passengers)\n",
+    "print(\"Average occupation of the bus is\", avg_occupation)\n",
+    "\n",
+    "lst_variance = []\n",
+    "\n",
+    "for i in nmbr_passengers:\n",
+    "    square = i**2\n",
+    "    lst_variance.append(square)\n",
+    "    \n",
+    "print(lst_variance)\n",
+    "\n",
+    "variance = sum(lst_variance)/len(lst_variance)\n",
+    "std = variance**0.5\n",
+    "\n",
+    "print(\"Standard deviation is\", std)"
    ]
   },
   {
@@ -117,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
