adding solution to repository

--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -49,10 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "\n",
+    "spells = len(saruman)\n",
+    "print(spells)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0\n",
+    "ties = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(spells):\n",
+    "    if gandalf[i] > saruman[i]:\n",
+    "        gandalf_wins += 1\n",
+    "    elif gandalf[i] < saruman[i]:\n",
+    "        saruman_wins += 1\n",
+    "    else:\n",
+    "        ties += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
+   "source": [
+    "if gandalf_wins > saruman_wins:\n",
+    "    print(\"Gandalf wins\")\n",
+    "elif gandalf_wins < saruman_wins:\n",
+    "    print(\"Saruman wins\")\n",
+    "else:\n",
+    "    print(\"Tie\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +169,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "spells = len(gandalf)\n",
+    "print(spells)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,10 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0\n",
+    "ties = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_power = []\n",
+    "saruman_power = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +243,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+      "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n",
+      "Gandalf wins\n"
+     ]
+    }
+   ],
+   "source": [
+    "for spell in gandalf:\n",
+    "    gandalf_power.append(POWER[spell])\n",
+    "print(gandalf_power)\n",
+    "\n",
+    "for spell in saruman:\n",
+    "    saruman_power.append(POWER[spell])\n",
+    "print(saruman_power)\n",
+    "\n",
+    "for i in range(spells):\n",
+    "    if gandalf_power[i] > saruman_power[i]:\n",
+    "        gandalf_wins += 1\n",
+    "        saruman_wins = 0\n",
+    "    elif gandalf[i] < saruman[i]:\n",
+    "        saruman_wins += 1\n",
+    "        gandalf_wins = 0\n",
+    "    elif gandalf[i] == saruman[i]:\n",
+    "        gandalf_wins = 0\n",
+    "        saruman_wins = 0\n",
+    "\n",
+    "if gandalf_wins >= 3:\n",
+    "    print(\"Gandalf wins\")\n",
+    "elif saruman_wins >= 3:\n",
+    "    print(\"Saruman wins\")\n",
+    "else:\n",
+    "    print(\"Nobody wins\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,10 +293,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average spell power of Gandalf is 39.0\n",
+      "Average spell power of Saruman is 30.5\n",
+      "Average spell power of Gandalf is 39\n",
+      "Average spell power of Saruman is 30.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_spellpower_gandalf = sum(gandalf_power)/len(gandalf_power)\n",
+    "avg_spellpower_saruman = sum(saruman_power)/len(saruman_power)\n",
+    "\n",
+    "print(\"Average spell power of Gandalf is\", avg_spellpower_gandalf)\n",
+    "print(\"Average spell power of Saruman is\", avg_spellpower_saruman)\n",
+    "\n",
+    "import statistics\n",
+    "\n",
+    "statistics.mean(gandalf_power)\n",
+    "print(\"Average spell power of Gandalf is\", (statistics.mean(gandalf_power)))\n",
+    "\n",
+    "statistics.mean(saruman_power)\n",
+    "print(\"Average spell power of Saruman is\", (statistics.mean(saruman_power)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,10 +332,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard Deviation of Gandalf's spell power is 15.132745950421556\n",
+      "Mean of Gandalf's spell power is 39.0\n",
+      "Standard Deviation of Saruman's spell power is 15.56438241627338\n",
+      "Mean of Saruman's spell power is 30.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mean(gandalf_power):\n",
+    "  n = len(gandalf_power)\n",
+    "  mean = sum(gandalf_power) / n\n",
+    "  return mean\n",
+    "\n",
+    "def variance(gandalf_power): \n",
+    "  n = len(gandalf_power) \n",
+    "  mean = sum(gandalf_power) / n\n",
+    "  deviations = [(x - mean) ** 2 for x in gandalf_power]\n",
+    "  variance = sum(deviations) / n\n",
+    "  return variance\n",
+    "\n",
+    "def stdev(gandalf_power):\n",
+    "  import math\n",
+    "  var = variance(gandalf_power)\n",
+    "  std_dev = math.sqrt(var)\n",
+    "  return std_dev\n",
+    "\n",
+    "print(\"Standard Deviation of Gandalf's spell power is\", (stdev(gandalf_power)))\n",
+    "print(\"Mean of Gandalf's spell power is\", (mean(gandalf_power)))\n",
+    "\n",
+    "def mean(saruman_power):\n",
+    "  n = len(saruman_power)\n",
+    "  mean = sum(saruman_power) / n\n",
+    "  return mean\n",
+    "\n",
+    "def variance(saruman_power): \n",
+    "  n = len(saruman_power) \n",
+    "  mean = sum(saruman_power) / n\n",
+    "  deviations = [(x - mean) ** 2 for x in saruman_power]\n",
+    "  variance = sum(deviations) / n\n",
+    "  return variance\n",
+    "\n",
+    "def stdev(saruman_power):\n",
+    "  import math\n",
+    "  var = variance(saruman_power)\n",
+    "  std_dev = math.sqrt(var)\n",
+    "  return std_dev\n",
+    "\n",
+    "print(\"Standard Deviation of Saruman's spell power is\", (stdev(saruman_power)))\n",
+    "print(\"Mean of Saruman's spell power is\", (mean(saruman_power)))"
+   ]
   }
  ],
  "metadata": {
@@ -221,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
