--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 5), (0, 2), (4, 7), (1, -3), (3, -2), (4, 5), (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2), (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2), (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+      "Arrow hit arrow for :  [(-3, 2), (4, 5), (5, 7), (2, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "points.sort\n",
+    "print(points)\n",
+    "\n",
+    "arrow = list(set([i for i in points if points.count(i) > 1]))\n",
+    "\n",
+    "print(\"Arrow hit arrow for : \", (arrow))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,10 +86,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of arrows in Q1 is  10\n",
+      "Number of arrows in Q2 is  6\n",
+      "Number of arrows in Q3 is  2\n",
+      "Number of arrows in Q4 is  2\n",
+      "Number of arrows in the axis is  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "q1 = [i for i in points if i[0]>0 and i[1]>0]\n",
+    "q2 = [i for i in points if i[0]<0 and i[1]>0]\n",
+    "q3 = [i for i in points if i[0]<0 and i[1]<0]\n",
+    "q4 = [i for i in points if i[0]>0 and i[1]<0]\n",
+    "axis = [i for i in points if i[0]==0 and i[1]==0]\n",
+    "\n",
+    "print(\"Number of arrows in Q1 is \", len(q1))\n",
+    "print(\"Number of arrows in Q2 is \", len(q2))\n",
+    "print(\"Number of arrows in Q3 is \", len(q3))\n",
+    "print(\"Number of arrows in Q4 is \", len(q4))\n",
+    "print(\"Number of arrows in the axis is \", len(axis))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +128,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.4031242374328485, 2.0, 8.06225774829855, 3.1622776601683795, 3.605551275463989, 6.4031242374328485, 3.605551275463989, 8.602325267042627, 8.602325267042627, 2.8284271247461903, 6.4031242374328485, 2.0, 8.06225774829855, 3.1622776601683795, 3.605551275463989, 6.4031242374328485, 3.605551275463989, 8.602325267042627, 8.602325267042627, 2.8284271247461903, 12.727922061357855, 12.041594578792296]\n",
+      "Minimal distance to the center is  2.0\n",
+      "Closest points to the center are  [(0, 2), (0, -2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance = []\n",
+    "\n",
+    "for i in points:\n",
+    "    d = ((0-i[0])**2 + (0-i[1])**2)**0.5\n",
+    "    distance.append(d)\n",
+    "\n",
+    "print(distance)\n",
+    "\n",
+    "min_distance = min(distance)\n",
+    "print(\"Minimal distance to the center is \", min_distance)\n",
+    "\n",
+    "pts_min_distance = [i for i in points if ((0-i[0])**2 + (0-i[1])**2)**0.5 == min_distance]\n",
+    "print(\"Closest points to the center are \", pts_min_distance)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,10 +167,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Points that won't hit the target  [(9, 9), (-8, -9)]\n",
+      "Number of points that won't hit the target  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "pts_off_target = [i for i in points if ((0-i[0])**2 + (0-i[1])**2)**0.5 > 9]\n",
+    "nmbr_off_target = len(pts_off_target)\n",
+    "\n",
+    "print(\"Points that won't hit the target \", pts_off_target)\n",
+    "print(\"Number of points that won't hit the target \", nmbr_off_target)"
+   ]
   }
  ],
  "metadata": {
@@ -125,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
