--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +143,8 @@
      "output_type": "stream",
      "text": [
       "Average occupation of the bus is 9.333333333333334\n",
-      "[100, 169, 121, 100, 196, 100, 49, 25, 16]\n",
-      "Standard deviation is 9.865765724632494\n"
+      "[0.44444444444444364, 13.44444444444444, 2.777777777777776, 0.44444444444444364, 21.77777777777777, 0.44444444444444364, 5.444444444444447, 18.777777777777782, 28.44444444444445]\n",
+      "Standard deviation is 3.197221015541813\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
     "lst_variance = []\n",
     "\n",
     "for i in nmbr_passengers:\n",
-    "    square = i**2\n",
+    "    square = (i-avg_occupation)**2\n",
     "    lst_variance.append(square)\n",
     "    \n",
     "print(lst_variance)\n",
