--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -219,15 +219,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[100, 1, 169, 3249, 576, 625]\n",
-      "Standard deviation is 28.047578623950173\n"
+      "[136.11111111111114, 427.11111111111114, 75.11111111111113, 1248.4444444444441, 5.444444444444439, 11.111111111111104]\n",
+      "Standard deviation is 17.81073334319006\n"
      ]
     }
    ],
@@ -235,7 +235,7 @@
     "displacement_square = []\n",
     "\n",
     "for i in displacement:\n",
-    "    square = i ** 2\n",
+    "    square = (i-avg_progress) ** 2\n",
     "    displacement_square.append(square)\n",
     "\n",
     "print(displacement_square)\n",
