--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum temperature is  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_temp = min(temperatures_C)\n",
+    "print(\"Minimum temperature is \", min_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum temperature is  90\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_temp = max(temperatures_C)\n",
+    "print(\"Maximum temperature is \", max_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperatures that are greater or equal to 70 C  [70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_70 = []\n",
+    "\n",
+    "for i in temperatures_C:\n",
+    "    if i >= 70:\n",
+    "        temp_70.append(i)\n",
+    "\n",
+    "#OR: temp_70 = [i for i in temperatures_C if i >= 70]\n",
+    "        \n",
+    "print(\"Temperatures that are greater or equal to 70 C \", temp_70)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +135,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average temperature is  60.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_temp = sum(temperatures_C)/len(temperatures_C)\n",
+    "print(\"Average temperature is \", avg_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +160,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 66, 65, 62.869565217391305, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_C.remove(0)\n",
+    "\n",
+    "avg_temp2 = sum(temperatures_C)/len(temperatures_C)\n",
+    "\n",
+    "temperatures_C[3]=avg_temp2\n",
+    "\n",
+    "print(temperatures_C)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +195,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperatures in Farenheit  [91.4, 150.8, 149.0, 145.16521739130434, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_F = []\n",
+    "\n",
+    "for i in temperatures_C:\n",
+    "    temp = 1.8*i+32\n",
+    "    temperatures_F.append(temp)\n",
+    "\n",
+    "print(\"Temperatures in Farenheit \", temperatures_F)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +233,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cooling system needs to be changed because more than 4 tempertures are greater than or equal to 70 C\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(temp_70) > 4:\n",
+    "    print(\"Cooling system needs to be changed because more than 4 tempertures are greater than or equal to 70 C\")\n",
+    "\n",
+    "elif max_temp > 80:\n",
+    "    print(\"Cooling system needs to be changed because any temperature is above 80\")\n",
+    "    \n",
+    "elif avg_temp2 > 65:\n",
+    "    print(\"Cooling system needs to be changed because average temperature exceeds 65 C\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Cooling system doesn't need to be changed\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,10 +278,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All temperatures  [33, 66, 65, 62.869565217391305, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+      "Hours where temperature is greater than 70 C  [8, 9, 10, 11, 12, 13, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "hours_greater_70 = []\n",
+    "\n",
+    "for (i, temperature) in enumerate (temperatures_C, start=0):\n",
+    "    if temperature > 70:\n",
+    "        hours_greater_70.append(i)\n",
+    "\n",
+    "print(\"All temperatures \", temperatures_C)\n",
+    "print(\"Hours where temperature is greater than 70 C \", hours_greater_70)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,10 +311,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-14-08dd596af041>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-14-08dd596af041>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    for i >= 1 in hours_greater_70:\u001b[0m\n\u001b[1;37m                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "consec_greater_70 = 0\n",
+    "\n",
+    "for i >= 1 in hours_greater_70:\n",
+    "    \n",
+    "    d = hours_greater_70[i] - hours_greater_70[i-1]\n",
+    "    \n",
+    "    if d == 1:\n",
+    "        consec_greater_70 += 1\n",
+    "    else:\n",
+    "        consec_greater_70 == 0\n",
+    "        \n",
+    "print(\"Consecutive hours above 70 C \", consec_greater_70)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +348,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'consec_70' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-eef9623dc66a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mconsec_70\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Cooling system needs to be changed because temperature is greater than 70 C for more than 4 consecutive hours\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32melif\u001b[0m \u001b[0mmax_temp\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m80\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Cooling system needs to be changed because any temperature is above 80\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'consec_70' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "if consec_70 > 4:\n",
+    "    print(\"Cooling system needs to be changed because temperature is greater than 70 C for more than 4 consecutive hours\")\n",
+    "\n",
+    "elif max_temp > 80:\n",
+    "    print(\"Cooling system needs to be changed because any temperature is above 80\")\n",
+    "    \n",
+    "elif avg_temp2 > 65:\n",
+    "    print(\"Cooling system needs to be changed because average temperature exceeds 65 C\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Cooling system doesn't need to be changed\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,10 +386,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average temperature C is  63.03780718336484\n",
+      "Average temperature F is  145.4680529300567\n",
+      "Relation  0.4333446823109291\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_temp_C = sum(temperatures_C)/len(temperatures_C)\n",
+    "avg_temp_F = sum(temperatures_F)/len(temperatures_F)\n",
+    "\n",
+    "print(\"Average temperature C is \", avg_temp_C)\n",
+    "print(\"Average temperature F is \", avg_temp_F)\n",
+    "\n",
+    "print(\"Relation \", avg_temp_C/avg_temp_F)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,10 +418,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard devivation of temperature C  14.924424302378638\n",
+      "Standard devivation of temperature F  26.86396374428155\n"
+     ]
+    }
+   ],
+   "source": [
+    "var_C = sum([(x - avg_temp_C) ** 2 for x in temperatures_C])/len(temperatures_C)\n",
+    "std_C = var_C ** 0.5\n",
+    "\n",
+    "print(\"Standard devivation of temperature C \", std_C)\n",
+    "\n",
+    "var_F = sum([(x - avg_temp_F) ** 2 for x in temperatures_F])/len(temperatures_F)\n",
+    "std_F = var_F ** 0.5\n",
+    "\n",
+    "print(\"Standard devivation of temperature F \", std_F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relation  0.5555555555555556\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Relation \", std_C/std_F)"
+   ]
   }
  ],
  "metadata": {
@@ -254,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
